Final for Day 1

--- a/09-writing-readme.html
+++ b/09-writing-readme.html
@@ -1,5 +1,5 @@
 ---
-title: "Part 7: Data citations and Provenance"
+title: "Part 9: Writing the README"
 author: 
   - "Lars Vilhuber"
   - "Marie Connolly"
@@ -14,6 +14,19 @@ output:
   
 ```{r, child=c('toc.md')}
 ```
+
+# Data provenance
+
+## Data provenance
+
+Let's complete the data provenance section of the README.
+
+- Data citation
+- Detailed provenance description
+
+## One more thing missing:
+
+License
 
 # Licenses
 
